# afio_samples

./: .gitmodules  CMakeLists.txt  afio.cpp  biicode.conf  ignore.bii
include/async/: future_extension.hpp
src/: dumping_file_contents_to_standard_output.cpp  dumping_file_contents_to_standard_output_with_constant_memory_consumption.cpp  dumping_file_contents_to_standard_output_with_multiple_buffers.cpp  listing_files_in_a_directory.cpp  write_multiple_files.cpp
